--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,16 @@
 * {
     box-sizing: border-box;
 }
+
+body {
+    margin: 0;
+    font-family: 'Poppins', sans-serif;
+}
+
+.navbar{
+    height: 70px;
+    display: flex;
+    padding: 20px 36px;
+    background-color: beige;
+    box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
+}
