--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    margin: 0;
+    margin: 20px;
     font-family: 'Poppins', sans-serif;
 }
 
@@ -13,4 +13,18 @@ body {
     padding: 20px 36px;
     background-color: beige;
     box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
+}
+.card-img{
+    width: 100%;
+    border-radius: 9px;
+    margin-bottom: 9px;
+}
+
+.card {
+    font-size: 12px;
+    display: grid;        
+    grid-template-columns: 300px 300px; 
+    grid-template-rows: 200px;
+    grid-column-gap: 30px;    
+    padding: 30px 10px 10px 10px;
 }
